src/test/resources/bad/provided/034a-cyclic-hierarchy.lat
class A extends A {
    int a;
}

int main () {
    return 0;
}
